vlib/v/checker/tests/assign_expr_undefined_err_k.out
vlib/v/checker/tests/assign_expr_undefined_err_k.vv:2:19: error: undefined variable: `a`
    1 | fn main() {
    2 |     mut a := {'one': a}
      |                      ^
    3 |     println(a)
    4 | }