vlib/v/checker/tests/assign_expr_undefined_err_k.vv
fn main() {
	mut a := {'one': a}
	println(a)
}
